; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/wtap/extr_if_medium.c_medium_get_next_packet.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/wtap/extr_if_medium.c_medium_get_next_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.packet = type { i32 }
%struct.wtap_medium = type { i32, i32 }

@pf_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.packet* @medium_get_next_packet(%struct.wtap_medium* %0) #0 {
  %2 = alloca %struct.packet*, align 8
  %3 = alloca %struct.wtap_medium*, align 8
  %4 = alloca %struct.packet*, align 8
  store %struct.wtap_medium* %0, %struct.wtap_medium** %3, align 8
  %5 = load %struct.wtap_medium*, %struct.wtap_medium** %3, align 8
  %6 = getelementptr inbounds %struct.wtap_medium, %struct.wtap_medium* %5, i32 0, i32 0
  %7 = call i32 @mtx_lock(i32* %6)
  %8 = load %struct.wtap_medium*, %struct.wtap_medium** %3, align 8
  %9 = getelementptr inbounds %struct.wtap_medium, %struct.wtap_medium* %8, i32 0, i32 1
  %10 = call %struct.packet* @STAILQ_FIRST(i32* %9)
  store %struct.packet* %10, %struct.packet** %4, align 8
  %11 = load %struct.packet*, %struct.packet** %4, align 8
  %12 = icmp eq %struct.packet* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load %struct.wtap_medium*, %struct.wtap_medium** %3, align 8
  %15 = getelementptr inbounds %struct.wtap_medium, %struct.wtap_medium* %14, i32 0, i32 0
  %16 = call i32 @mtx_unlock(i32* %15)
  store %struct.packet* null, %struct.packet** %2, align 8
  br label %26

17:                                               ; preds = %1
  %18 = load %struct.wtap_medium*, %struct.wtap_medium** %3, align 8
  %19 = getelementptr inbounds %struct.wtap_medium, %struct.wtap_medium* %18, i32 0, i32 1
  %20 = load i32, i32* @pf_list, align 4
  %21 = call i32 @STAILQ_REMOVE_HEAD(i32* %19, i32 %20)
  %22 = load %struct.wtap_medium*, %struct.wtap_medium** %3, align 8
  %23 = getelementptr inbounds %struct.wtap_medium, %struct.wtap_medium* %22, i32 0, i32 0
  %24 = call i32 @mtx_unlock(i32* %23)
  %25 = load %struct.packet*, %struct.packet** %4, align 8
  store %struct.packet* %25, %struct.packet** %2, align 8
  br label %26

26:                                               ; preds = %17, %13
  %27 = load %struct.packet*, %struct.packet** %2, align 8
  ret %struct.packet* %27
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local %struct.packet* @STAILQ_FIRST(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @STAILQ_REMOVE_HEAD(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
